@@ -1,8 +1,16 @@
-2024-11-01  Charlie Zender  <zender@uci.edu>
+2024-11-05  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.3.0-alpha03 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha03: Slow Horses';git push
 	git tag -a 5.3.0-alpha03 -m 'ncks: S1D mecp1 soil';git push --tags
+
+	* Diagnostic frc_column and frc_landunit from restart files works
+
+2024-11-04  Charlie Zender  <zender@uci.edu>
+
+	* Add infrastructure to diagnose frc_column and frc_landunit from restart files
+
+2024-11-01  Charlie Zender  <zender@uci.edu>
 
 	* S1D insert additional MEC layer (index=0) that stores soil column data
 
